# flutter_alacritty

./: .gitignore  .gitmodules  .metadata  .pubignore  CHANGELOG.md  LICENSE  PUBLISHING.md  README.md  dart_test.yaml  distribute_options.yaml  flutter_alacritty.toml.example  flutter_rust_bridge.yaml  pubspec.yaml
docs/: library-api.md  rendering-performance.md
integration_test/: simple_test.dart
lib/: flutter_alacritty.dart  main.dart
linux/: CMakeLists.txt
rust/: Cargo.toml
rust/src/: engine.rs  event_proxy.rs  frb_generated.rs  lib.rs
rust/src/api/: mod.rs  terminal.rs
test/: box_drawing_test.dart  color_parse_test.dart  config_loader_test.dart  config_loader_watch_test.dart  effective_colors_test.dart  engine_benchmark_test.dart  engine_bindings_test.dart  engine_breakdown_test.dart  engine_client_resize_test.dart  engine_client_test.dart  fake_binding.dart  glyph_atlas_test.dart  glyph_cache_test.dart  grid_repaint_test.dart  ime_key_routing_test.dart  ime_session_test.dart  key_bindings_test.dart  key_input_test.dart  kitty_keyboard_test.dart  mirror_grid_test.dart  mouse_input_test.dart  osc52_paste_test.dart  paste_test.dart  program_scroll_encoder_test.dart  rendering_benchmark_test.dart  resize_commit_policy_test.dart  review_fixes_test.dart  scroll_accumulator_test.dart  scroll_benchmark_test.dart  scroll_coalesce_test.dart  scroll_destination_test.dart  term_mode_test.dart  terminal_config_test.dart  terminal_controller_test.dart  terminal_engine_test.dart  terminal_engine_write_coalesce_test.dart  terminal_lifecycle_test.dart  (+18 more)
web/: index.html
(+112 files in other folders)
