[package]
name = "rust_lib_flutter_alacritty"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
# Pinned to a specific upstream commit for reproducible builds on any machine
# (no reliance on a local checkout or an untracked symlink). Bump `rev` to move
# the engine forward. To hack on alacritty locally, uncomment the [patch] below.
alacritty_terminal = { git = "https://github.com/alacritty/alacritty.git", rev = "55f12aae2930b48d8727ae49ea1e472af16a9247" }

# Local development override: point the pinned git dep at a local checkout so you
# can modify the engine and rebuild without pushing. Adjust the path as needed.
# [patch."https://github.com/alacritty/alacritty.git"]
# alacritty_terminal = { path = "/home/hhoa/git/opensource/alacritty/alacritty_terminal" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
